# edinet2dataset

./: .env.sample  LICENSE  README.md  bankruptcy_companys.sh  edinet_corpus.sh  parsed_output.json  pyproject.toml  random_10_company.sh
data/: EdinetcodeDlInfo.csv  industry_revision.txt
data/E00616/: S100ID2V.tsv
data/E01297/: S100J3MV.tsv
data/E01863/: S100J4VG.tsv  S100LQ4H.tsv
data/E04084/: S100JN61.tsv
data/E27562/: S100IV50.tsv
data/E36698/: S100LROW.tsv
parsed_outputs/: S100IBML_parsed.json  S100ID2V_parsed.json  S100IOP9_parsed.json  S100ISXG_parsed.json  S100IV50_parsed.json  S100J3MV_parsed.json  S100J4VG_parsed.json  S100JN61_parsed.json  S100LROW_parsed.json  combine.py  example_merged_edinet_data.json  merged_edinet_data_20250616_001049.csv  merged_edinet_data_20250616_001049.json  merged_edinet_data_20250616_001620.json
scripts/: analyze_frequency_per_industry.py  analyze_frequency_per_year.py  prepare_edinet_corpus.py
scripts/earnings_forecast/: push_to_hf.py
scripts/fraud_detection/: analyze_fraud_explanation.py  prepare_dataset.py  prepare_fraud.py  prepare_nonfraud.py  push_to_hf.py
scripts/industry_prediction/: prepare_dataset.py  push_to_hf.py
src/edinet2dataset/: downloader.py  parser.py  schema.py
